@@ -38,6 +38,7 @@ import java.util.Enumeration;
 import java.util.GregorianCalendar;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.regex.Pattern;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -46,31 +47,42 @@ import org.opennms.core.utils.OwnedIntervalSequence;
 import org.opennms.core.utils.Owner;
 import org.opennms.core.utils.TimeInterval;
 import org.opennms.netmgt.config.groups.Schedule;
-import org.opennms.netmgt.config.poller.Outage;
+import org.opennms.netmgt.config.poller.outages.Outage;
 
 /**
  * <p>BasicScheduleUtils class.</p>
- *
- * @author ranger
- * @version $Id: $
  */
 public abstract class BasicScheduleUtils {
     private static final Logger LOG = LoggerFactory.getLogger(BasicScheduleUtils.class);
+    private static final Pattern SPECIFIC_DATE_PATTERN = Pattern.compile("^(\\d\\d\\d\\d-\\d\\d-\\d\\d|\\d\\d-...-\\d\\d\\d\\d) .*$");
 
     /**
      * The day of the week values to name mapping
      */
-    protected static Map<String,Integer> m_dayOfWeekMap;
+    protected static final ThreadLocal<Map<String,Integer>> m_dayOfWeekMap = new ThreadLocal<Map<String,Integer>>() {
+        @Override protected Map<String,Integer> initialValue() {
+            final Map<String,Integer> map = new HashMap<String,Integer>();
+            map.put("sunday", Calendar.SUNDAY);
+            map.put("monday", Calendar.MONDAY);
+            map.put("tuesday", Calendar.TUESDAY);
+            map.put("wednesday", Calendar.WEDNESDAY);
+            map.put("thursday", Calendar.THURSDAY);
+            map.put("friday", Calendar.FRIDAY);
+            map.put("saturday", Calendar.SATURDAY);
+            return map;
+        };
+    };
+
     /** Constant <code>FORMAT1="dd-MMM-yyyy HH:mm:ss"</code> */
-    public static String FORMAT1 = "dd-MMM-yyyy HH:mm:ss";
+    public static final String FORMAT1 = "dd-MMM-yyyy HH:mm:ss";
     /** Constant <code>FORMAT2="HH:mm:ss"</code> */
-    public static String FORMAT2 = "HH:mm:ss";
+    public static final String FORMAT2 = "HH:mm:ss";
 
     /**
      * <p>isTimeInSchedule</p>
      *
      * @param cal a {@link java.util.Calendar} object.
-     * @param sched a {@link org.opennms.netmgt.config.common.BasicSchedule} object.
+     * @param sched a {@link org.opennms.netmgt.config.poller.outages.common.BasicSchedule} object.
      * @return a boolean.
      */
     public static boolean isTimeInSchedule(final Calendar cal, final BasicSchedule sched) {
@@ -216,94 +228,78 @@ public abstract class BasicScheduleUtils {
      * @param dayName a {@link java.lang.String} object.
      * @return a {@link java.lang.Integer} object.
      */
-    public static Integer getDayOfWeekIndex(String dayName) {
-        createDayOfWeekMapping();
-        return (Integer)m_dayOfWeekMap.get(dayName);
+    public static Integer getDayOfWeekIndex(final String dayName) {
+        if (dayName == null) return null;
+        return m_dayOfWeekMap.get().get(dayName.toLowerCase());
     }
     
     /**
      * <p>getEndOfSchedule</p>
      *
-     * @param out a {@link org.opennms.netmgt.config.common.BasicSchedule} object.
+     * @param out a {@link org.opennms.netmgt.config.poller.outages.common.BasicSchedule} object.
      * @return a {@link java.util.Calendar} object.
      */
     public static Calendar getEndOfSchedule(final BasicSchedule out) {
-        long curCalTime = System.currentTimeMillis();
-        Calendar cal = new GregorianCalendar();
+        final long curCalTime = System.currentTimeMillis();
+        final Calendar cal = new GregorianCalendar();
         cal.setTimeInMillis(curCalTime);
+
         // check if day is part of outage
         boolean inOutage = false;
-        Enumeration<Time> en = out.enumerateTime();
+        
+        final Enumeration<Time> en = out.enumerateTime();
         while (en.hasMoreElements() && !inOutage) {
-            Calendar outCalBegin = new GregorianCalendar();
-            Calendar outCalEnd = new GregorianCalendar();
-    
-            Time oTime = (Time) en.nextElement();
-    
-            String oTimeDay = oTime.getDay();
-            String begins = oTime.getBegins();
-            String ends = oTime.getEnds();
-    
+            final Calendar outCalBegin = new GregorianCalendar();
+            final Calendar outCalEnd = new GregorianCalendar();
+
+            final Time oTime = en.nextElement();
+
+            final String oTimeDay = oTime.getDay();
+            final String begins = oTime.getBegins();
+            final String ends = oTime.getEnds();
+
             if (oTimeDay != null) {
                 // see if outage time was specified as sunday/monday..
-                Integer dayInMap = getDayOfWeekIndex(oTimeDay);
+                final Integer dayInMap = getDayOfWeekIndex(oTimeDay);
                 if (dayInMap != null) {
                     // check if value specified matches current date
-                    if (cal.get(Calendar.DAY_OF_WEEK) == dayInMap.intValue())
-                        inOutage = true;
-    
+                    if (cal.get(Calendar.DAY_OF_WEEK) == dayInMap.intValue()) inOutage = true;
                     outCalBegin.set(Calendar.DAY_OF_WEEK, dayInMap.intValue());
                     outCalEnd.set(Calendar.DAY_OF_WEEK, dayInMap.intValue());
-                } // else see if outage time was specified as day of month
+                }
+                // else see if outage time was specified as day of month
                 else {
-                    int intOTimeDay = (new Integer(oTimeDay)).intValue();
+                    final int intOTimeDay = Integer.valueOf(oTimeDay).intValue();
     
-                    if (cal.get(Calendar.DAY_OF_MONTH) == intOTimeDay)
-                        inOutage = true;
+                    if (cal.get(Calendar.DAY_OF_MONTH) == intOTimeDay) inOutage = true;
     
                     outCalBegin.set(Calendar.DAY_OF_MONTH, intOTimeDay);
                     outCalEnd.set(Calendar.DAY_OF_MONTH, intOTimeDay);
                 }
             }
-    
+
             // if time of day was specified and did not match, continue
             if (oTimeDay != null && !inOutage) {
                 continue;
             }
+
             // set time in out calendars
             setOutCalTime(outCalBegin, begins);
             setOutCalTime(outCalEnd, ends);
-    
-            long outCalBeginTime = outCalBegin.getTime().getTime() / 1000 * 1000;
-            long outCalEndTime = (outCalEnd.getTime().getTime() / 1000 + 1) * 1000;
-    
-            if (curCalTime >= outCalBeginTime && curCalTime < outCalEndTime)
-                return outCalEnd;
+
+            final long outCalBeginTime = outCalBegin.getTime().getTime() / 1000 * 1000;
+            final long outCalEndTime = (outCalEnd.getTime().getTime() / 1000 + 1) * 1000;
+
+            if (curCalTime >= outCalBeginTime && curCalTime < outCalEndTime) return outCalEnd;
         }
         return null; // Couldn't find a time period that matches
-    }
-
-    /**
-     * Create the day of week mapping
-     */
-    private static void createDayOfWeekMapping() {
-        if (BasicScheduleUtils.m_dayOfWeekMap == null) {
-            BasicScheduleUtils.m_dayOfWeekMap = new HashMap<String,Integer>();
-            BasicScheduleUtils.m_dayOfWeekMap.put("sunday", Calendar.SUNDAY);
-            BasicScheduleUtils.m_dayOfWeekMap.put("monday", Calendar.MONDAY);
-            BasicScheduleUtils.m_dayOfWeekMap.put("tuesday", Calendar.TUESDAY);
-            BasicScheduleUtils.m_dayOfWeekMap.put("wednesday", Calendar.WEDNESDAY);
-            BasicScheduleUtils.m_dayOfWeekMap.put("thursday", Calendar.THURSDAY);
-            BasicScheduleUtils.m_dayOfWeekMap.put("friday", Calendar.FRIDAY);
-            BasicScheduleUtils.m_dayOfWeekMap.put("saturday", Calendar.SATURDAY);
-        }
     }
 
     /**
      * <p>isTimeInSchedule</p>
      *
      * @param time a {@link java.util.Date} object.
-     * @param sched a {@link org.opennms.netmgt.config.common.BasicSchedule} object.
+     * @param sched a {@link org.opennms.netmgt.config.poller.outages.common.BasicSchedule} object.
      * @return a boolean.
      */
     public static boolean isTimeInSchedule(final Date time, final BasicSchedule sched) {
@@ -315,7 +311,7 @@ public abstract class BasicScheduleUtils {
     /**
      * <p>isDaily</p>
      *
-     * @param time a {@link org.opennms.netmgt.config.common.Time} object.
+     * @param time a {@link org.opennms.netmgt.config.poller.outages.common.Time} object.
      * @return a boolean.
      */
     public static boolean isDaily(final Time time) {
@@ -325,7 +321,7 @@ public abstract class BasicScheduleUtils {
     /**
      * <p>isWeekly</p>
      *
-     * @param time a {@link org.opennms.netmgt.config.common.Time} object.
+     * @param time a {@link org.opennms.netmgt.config.poller.outages.common.Time} object.
      * @return a boolean.
      */
     public static boolean isWeekly(final Time time) {
@@ -335,7 +331,7 @@ public abstract class BasicScheduleUtils {
     /**
      * <p>isMonthly</p>
      *
-     * @param time a {@link org.opennms.netmgt.config.common.Time} object.
+     * @param time a {@link org.opennms.netmgt.config.poller.outages.common.Time} object.
      * @return a boolean.
      */
     public static boolean isMonthly(final Time time) {
@@ -345,16 +341,12 @@ public abstract class BasicScheduleUtils {
     /**
      * <p>isSpecific</p>
      *
-     * @param time a {@link org.opennms.netmgt.config.common.Time} object.
+     * @param time a {@link org.opennms.netmgt.config.poller.outages.common.Time} object.
      * @return a boolean.
      */
     public static boolean isSpecific(final Time time) {
         if (time.getDay() == null) {
-            if (time.getBegins().matches("^\\d\\d\\d\\d-\\d\\d-\\d\\d .*$")) {
-                return true;
-            } else if (time.getBegins().matches("^\\d\\d-...-\\d\\d\\d\\d .*$")) {
-                return true;
-            }
+            return SPECIFIC_DATE_PATTERN.matcher(time.getBegins()).matches();
         }
         return false;
     }
@@ -421,7 +413,7 @@ public abstract class BasicScheduleUtils {
      * <p>getInterval</p>
      *
      * @param ref a {@link java.util.Date} object.
-     * @param time a {@link org.opennms.netmgt.config.common.Time} object.
+     * @param time a {@link org.opennms.netmgt.config.poller.outages.common.Time} object.
      * @param owner a {@link org.opennms.core.utils.Owner} object.
      * @return a {@link org.opennms.core.utils.OwnedInterval} object.
      */
@@ -481,7 +473,7 @@ public abstract class BasicScheduleUtils {
      *
      * @param start a {@link java.util.Date} object.
      * @param end a {@link java.util.Date} object.
-     * @param time a {@link org.opennms.netmgt.config.common.Time} object.
+     * @param time a {@link org.opennms.netmgt.config.poller.outages.common.Time} object.
      * @param owner a {@link org.opennms.core.utils.Owner} object.
      * @return a {@link org.opennms.core.utils.OwnedIntervalSequence} object.
      */
@@ -517,7 +509,7 @@ public abstract class BasicScheduleUtils {
      * <p>getIntervals</p>
      *
      * @param interval a {@link org.opennms.core.utils.TimeInterval} object.
-     * @param time a {@link org.opennms.netmgt.config.common.Time} object.
+     * @param time a {@link org.opennms.netmgt.config.poller.outages.common.Time} object.
      * @param owner a {@link org.opennms.core.utils.Owner} object.
      * @return a {@link org.opennms.core.utils.OwnedIntervalSequence} object.
      */
@@ -530,7 +522,7 @@ public abstract class BasicScheduleUtils {
      *
      * @param start a {@link java.util.Date} object.
      * @param end a {@link java.util.Date} object.
-     * @param sched a {@link org.opennms.netmgt.config.common.BasicSchedule} object.
+     * @param sched a {@link org.opennms.netmgt.config.poller.outages.common.BasicSchedule} object.
      * @param owner a {@link org.opennms.core.utils.Owner} object.
      * @return a {@link org.opennms.core.utils.OwnedIntervalSequence} object.
      */
@@ -548,7 +540,7 @@ public abstract class BasicScheduleUtils {
      * <p>getIntervalsCovering</p>
      *
      * @param interval a {@link org.opennms.core.utils.TimeInterval} object.
-     * @param sched a {@link org.opennms.netmgt.config.common.BasicSchedule} object.
+     * @param sched a {@link org.opennms.netmgt.config.poller.outages.common.BasicSchedule} object.
      * @param owner a {@link org.opennms.core.utils.Owner} object.
      * @return a {@link org.opennms.core.utils.OwnedIntervalSequence} object.
      */
@@ -562,7 +554,7 @@ public abstract class BasicScheduleUtils {
 		schedule.setName(out.getName());
 		schedule.setType(out.getType());
 		final Collection<Time> times = new ArrayList<Time>();
-		for (final org.opennms.netmgt.config.poller.Time time : out.getTimeCollection()) {
+		for (final org.opennms.netmgt.config.poller.outages.Time time : out.getTimeCollection()) {
 			times.add(new Time(time.getId(), time.getDay(), time.getBegins(), time.getEnds()));
 		}
 		schedule.setTimeCollection(times);
